theme: Fix GtkActionBar spacing

--- a/gtk/theme/Default/_common.scss
+++ b/gtk/theme/Default/_common.scss
@@ -3193,8 +3193,11 @@ frame {
 
 actionbar > revealer > box {
   padding: 6px;
-  border-spacing: 6px;
   border-top: 1px solid $borders_color;
+
+  &, > box.start, > box.end {
+    border-spacing: 6px;
+  }
 }
 
 scrolledwindow {
